--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
    "name": "project",
    "version": "0.0.1",
    "description": "project",
-   "main": "app.js",
+   "main": "index.js",
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "ts-node src/app.ts"
+      "start": "ts-node src/index.ts"
    },
    "author": "",
    "license": "ISC",
