--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
    },
    "author": "",
    "license": "ISC",
+   "type": "module",
    "dependencies": {
       "@types/bcrypt": "^3.0.1",
       "@types/dotenv": "^8.2.0",
