--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
       "strictPropertyInitialization": false,
       "esModuleInterop": true
    },
-   "include": ["**/*.ts"],
+   "include": ["src/**/*.ts"],
    "exclude": ["./build"]
 }
