--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
    "name": "project",
    "version": "0.0.1",
    "description": "project",
-   "main": "index.js",
+   "main": "build/index.js",
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
       "start": "node build/app.js"
