--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
    "main": "build/index.js",
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node build/app.js"
+      "start": "ts-node src/app.ts"
    },
    "author": "",
    "license": "ISC",
