--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
       "@types/jsonwebtoken": "^8.5.1",
       "@types/method-override": "^0.0.31",
       "@types/morgan": "^1.9.2",
+      "@types/multer": "^1.4.5",
       "@types/mysql": "^2.15.18",
       "@types/nodemailer": "^6.4.1",
       "@types/nodemailer-direct-transport": "^1.0.31",
@@ -27,6 +28,7 @@
       "jsonwebtoken": "^8.5.1",
       "method-override": "^3.0.0",
       "morgan": "^1.10.0",
+      "multer": "^1.4.2",
       "mysql": "^2.14.1",
       "nodemailer": "^6.5.0",
       "nodemailer-smtp-transport": "^2.7.4",
