--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,9 +2,9 @@
    "type": "mysql",
    "host": "us-cdbr-east-03.cleardb.com",
    "port": 3306,
-   "username": "b54c4065fa9513",
-   "password": "5f20918c",
-   "database": "heroku_f356c617325b1c0",
+   "username": "b69ae8a46a5023",
+   "password": "82c08380",
+   "database": "heroku_105ede0d8431926",
    "synchronize": true,
    "logging": true,
    "entities": [
