--- a/package.json
+++ b/package.json
@@ -5,40 +5,40 @@
    "main": "build/index.js",
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "npx ts-node src/app.ts"
+      "start": "ts-node src/app.ts"
    },
    "author": "",
    "license": "ISC",
    "dependencies": {
-      "@types/bcrypt": "^3.0.1",
+      "@types/bcrypt": "^5.0.0",
       "@types/dotenv": "^8.2.0",
-      "@types/express": "^4.17.11",
+      "@types/express": "^4.17.12",
       "@types/jsonwebtoken": "^8.5.1",
       "@types/method-override": "^0.0.31",
       "@types/morgan": "^1.9.2",
       "@types/multer": "^1.4.5",
       "@types/mysql": "^2.15.18",
-      "@types/nodemailer": "^6.4.1",
+      "@types/nodemailer": "^6.4.2",
       "@types/nodemailer-direct-transport": "^1.0.31",
       "@types/nodemailer-smtp-transport": "^2.7.4",
       "@types/request": "^2.48.5",
       "bcrypt": "^5.0.1",
-      "dotenv": "^8.2.0",
+      "dotenv": "^10.0.0",
       "express": "^4.17.1",
       "jsonwebtoken": "^8.5.1",
       "method-override": "^3.0.0",
       "morgan": "^1.10.0",
       "multer": "^1.4.2",
-      "mysql": "^2.14.1",
-      "nodemailer": "^6.5.0",
+      "mysql": "^2.18.1",
+      "nodemailer": "^6.6.1",
       "nodemailer-smtp-transport": "^2.7.4",
       "reflect-metadata": "^0.1.13",
       "request": "^2.88.2",
       "typeorm": "0.2.32"
    },
    "devDependencies": {
-      "@types/node": "^8.0.29",
-      "ts-node": "3.3.0",
-      "typescript": "3.3.3333"
+      "@types/node": "^15.6.1",
+      "ts-node": "10.0.0",
+      "typescript": "4.2.4"
    }
 }
