--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
    "main": "build/index.js",
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "tsc && node build/app.js"
+      "start": "npx tsc && node build/app.js"
    }, 
    "author": "",
    "license": "ISC",
