--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
    "version": "0.0.1",
    "description": "project",
    "main": "build/index.js",
-   "private":"true",
+   "private":true,
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
       "start": "ts-node src/app.ts"
