--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
    "version": "0.0.1",
    "description": "project",
    "main": "build/index.js",
-   "private":true,
+   "private": true,
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
       "start": "ts-node src/app.ts"
-   }, 
+   },
    "author": "",
    "license": "ISC",
    "dependencies": {
@@ -35,9 +35,11 @@
       "nodemailer-smtp-transport": "^2.7.4",
       "reflect-metadata": "^0.1.13",
       "request": "^2.88.2",
-      "typeorm": "0.2.32",
+      "typeorm": "0.2.32"
+   },
+   "devDependencies": {
       "@types/node": "^15.6.1",
       "ts-node": "10.0.0",
-      "typescript": "4.2.4"
+      "typescript": "^4.2.4"
    }
 }
