--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
    "version": "0.0.1",
    "description": "project",
    "main": "build/index.js",
-   "private": true,
+   "private":true,
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
       "start": "ts-node src/app.ts"
-   },
+   }, 
    "author": "",
    "license": "ISC",
    "dependencies": {
@@ -38,8 +38,8 @@
       "typeorm": "0.2.32"
    },
    "devDependencies": {
-      "@types/node": "^15.6.1",
+      "@types/node": "15.6.1",
       "ts-node": "10.0.0",
-      "typescript": "^4.2.4"
+      "typescript": "4.2.4"
    }
 }
