--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
    "private": true,
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "ts-node src/app.ts"
+      "start": "node build/app.js"
    },
    "author": "",
    "license": "ISC",
@@ -38,6 +38,6 @@
    "devDependencies": {
       "@types/node": "15.6.1",
       "ts-node": "10.0.0",
-      "typescript": "4.2.4"
+      "typescript": "^4.2.4"
    }
 }
