--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
    "description": "project",
    "main": "build/index.js",
    "private": true,
+   "type": "module",
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
       "start": "node build/app.js"
