--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
    "private": true,
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node build/app.js"
+      "start": "ts-node src/app.ts"
    },
    "author": "",
    "license": "ISC",
