--- a/package.json
+++ b/package.json
@@ -32,10 +32,7 @@
       "mysql": "^2.18.1",
       "nodemailer": "^6.6.1",
       "reflect-metadata": "^0.1.13",
-      "request": "^2.88.2",
-      "typeorm": "0.2.32"
-   },
-   "devDependencies": {
+      "typeorm": "0.2.32",
       "@types/node": "15.6.1",
       "ts-node": "10.0.0",
       "typescript": "^4.2.4"
