--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
       "mysql": "^2.18.1",
       "nodemailer": "^6.6.1",
       "reflect-metadata": "^0.1.13",
-      "typeorm": "0.2.32",
+      "typeorm": "0.2.32"
+   },
+   "devDependencies": {
       "@types/node": "15.6.1",
       "ts-node": "10.0.0",
       "typescript": "^4.2.4"
