--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,10 +1,10 @@
 {
    "type": "mysql",
-   "host": "us-cdbr-east-03.cleardb.com",
+   "host": "127.0.0.1",
    "port": 3306,
-   "username": "b8f0f34a275b0b",
-   "password": "379d82b1",
-   "database": "heroku_c9486ee8337d5e1",
+   "username": "project",
+   "password": "project",
+   "database": "project",
    "synchronize": true,
    "logging": false,
    "entities": [
