--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
       "@types/mysql": "^2.15.18",
       "@types/nodemailer": "^6.4.2",
       "@types/nodemailer-direct-transport": "^1.0.31",
+      "@types/nodemailer-smtp-transport": "^2.7.4",
       "@types/request": "^2.48.5",
       "bcrypt": "^5.0.1",
       "dotenv": "^10.0.0",
@@ -31,6 +32,7 @@
       "multer": "^1.4.2",
       "mysql": "^2.18.1",
       "nodemailer": "^6.6.1",
+      "nodemailer-smtp-transport": "^2.7.4",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.2.32"
    },
